firmware/build/log/idf_py_stdout_output_35209
Command: ninja all
[1/14] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/__/lib/tracks.c.obj
[2/14] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/mini_game.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/mini_game.c.obj 
/home/chris/.espressif/tools/riscv32-esp-elf/esp-15.2.0_20251204/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.0.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/chris/Projects/mini_game/firmware/build/config -I/home/chris/Projects/mini_game/firmware/main -I/home/chris/Projects/mini_game/firmware/lib -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_libc/platform_include -I/home/chris/.espressif/v6.0.1/esp-idf/components/freertos/config/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/freertos/config/include/freertos -I/home/chris/.espressif/v6.0.1/esp-idf/components/freertos/config/riscv/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/chris/.espressif/v6.0.1/esp-idf/components/freertos/esp_additions/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hw_support/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hw_support/include/soc -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hw_support/ldo/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hw_support/debug_probe/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hw_support/etm/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hw_support/power_supply/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hw_support/modem/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hw_support/port/esp32c6/. -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hw_support/port/esp32c6/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hw_support/port/esp32c6/private_include -I/home/chris/.espressif/v6.0.1/esp-idf/components/heap/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/heap/tlsf -I/home/chris/.espressif/v6.0.1/esp-idf/components/log/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/soc/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/soc/esp32c6 -I/home/chris/.espressif/v6.0.1/esp-idf/components/soc/esp32c6/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/soc/esp32c6/register -I/home/chris/.espressif/v6.0.1/esp-idf/components/hal/platform_port/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/hal/esp32c6/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/hal/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_rom/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_rom/esp32c6/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_rom/esp32c6/include/esp32c6 -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_rom/esp32c6 -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_common/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_system/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_system/port/soc -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_system/port/include/riscv -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_system/port/include/private -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_stdio/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/riscv/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hal_gpio/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hal_gpio/esp32c6/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hal_usb/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hal_usb/esp32c6/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hal_pmu/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hal_pmu/esp32c6/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hal_ana_conv/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hal_ana_conv/esp32c6/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hal_dma/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hal_dma/esp32c6/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/lwip/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/lwip/include/apps -I/home/chris/.espressif/v6.0.1/esp-idf/components/lwip/lwip/src/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/lwip/port/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/lwip/port/freertos/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/lwip/port/esp32xx/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/chris/.espressif/v6.0.1/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_driver_ledc/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hal_ledc/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hal_ledc/esp32c6/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_adc/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_adc/interface -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_adc/esp32c6/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_timer/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/nvs_flash/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_partition/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_blockdev/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_driver_i2c/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hal_i2c/esp32c6/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hal_i2c/include -I/home/chris/Projects/mini_game/firmware/components/controller_driver/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/driver/i2c/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/driver/touch_sensor/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/driver/twai/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hal_twai/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hal_twai/esp32c6/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_hal_touch_sens/include -I/home/chris/.espressif/v6.0.1/esp-idf/components/esp_driver_gpio/include -I/home/chris/Projects/mini_game/firmware/components/sound_driver/include -I/home/chris/Projects/mini_game/firmware/components/ssd1306/include @"/home/chris/Projects/mini_game/firmware/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/chris/Projects/mini_game/firmware=. -fmacro-prefix-map=/home/chris/.espressif/v6.0.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/mini_game.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/mini_game.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/mini_game.c.obj -c /home/chris/Projects/mini_game/firmware/main/mini_game.c
In file included from /home/chris/Projects/mini_game/firmware/main/mini_game.c:4:
/home/chris/Projects/mini_game/firmware/main/mini_game.h:20:5: error: unknown type name 'Controller_t'
   20 |     Controller_t controller;
      |     ^~~~~~~~~~~~
/home/chris/Projects/mini_game/firmware/main/mini_game.c: In function 'app_main':
/home/chris/Projects/mini_game/firmware/main/mini_game.c:17:19: error: passing argument 1 of 'Controller_Init' from incompatible pointer type [-Wincompatible-pointer-types]
   17 |   Controller_Init(&app.controller);
      |                   ^~~~~~~~~~~~~~~
      |                   |
      |                   int *
In file included from /home/chris/Projects/mini_game/firmware/main/mini_game.c:5:
/home/chris/Projects/mini_game/firmware/components/controller_driver/include/controller_driver.h:44:36: note: expected 'Controller_t *' but argument is of type 'int *'
   44 | void Controller_Init(Controller_t *controller);
      |                      ~~~~~~~~~~~~~~^~~~~~~~~~
/home/chris/Projects/mini_game/firmware/main/mini_game.c: At top level:
/home/chris/Projects/mini_game/firmware/main/mini_game.c:10:20: warning: 'TAG' defined but not used [-Wunused-variable]
   10 | static const char *TAG = "GAME_TEST";
      |                    ^~~
[3/14] Performing build step for 'bootloader'
[1/1] cd /home/chris/Projects/mini_game/firmware/build/bootloader && /home/chris/.espressif/python_env/idf6.0_py3.11_env/bin/python /home/chris/.espressif/v6.0.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/chris/Projects/mini_game/firmware/build/bootloader/bootloader.bin
Bootloader binary size 0x5820 bytes. 0x27e0 bytes (31%) free.
[4/14] Building C object esp-idf/sound_driver/CMakeFiles/__idf_sound_driver.dir/src/sound_driver.c.obj
[5/14] Building C object esp-idf/controller_driver/CMakeFiles/__idf_controller_driver.dir/src/controller_driver.c.obj
ninja: build stopped: subcommand failed.
